--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tourradar-assignment-2",
+  "name": "coding-assignment-852",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
